Updating JUDO version